fix footer on ios

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -446,10 +446,6 @@ button:hover {
   -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
   -webkit-flex-direction: column;
